@@ -1,6 +1,8 @@
 2011-11-16  Peter Schueller  <ps@kr.tuwien.ac.at>
 
-	* examples/agg4.hex: Added new testcase for aggregates to detect regression.
+	* src/dlvhex/SafetyChecker.cpp: Fixed bug in safety checker.
+	* examples/agg4.hex: Added new testcase for aggregates to detect
+	above safety checker bug.
 	* examples/tests/agg4.out: Likewise.
 	* examples/tests/dlvhextests.test: Likewise.
 	* examples/Makefile.am: Likewise.
